# quickLines

./: .buildinfo  816045_1d.fits  README.md  genindex.html  index.html  install.html  py-modindex.html  pyproject.toml  quicklines.html  run.sh  search.html  searchindex.js  usage.html
.doctrees/: environment.pickle  index.doctree  install.doctree  quicklines.doctree  usage.doctree
.github/workflows/: gh-pages.yml
_sources/: index.rst  usage.rst
data/: zCOSMOS_20K.fits
docs/: conf.py  index.rst  install.rst  quicklines.rst
docs/_build/doctrees/: environment.pickle  index.doctree  install.doctree  quicklines.doctree  usage.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  install.html  objects.inv  py-modindex.html  quicklines.html  search.html  searchindex.js  usage.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree  install.doctree  quicklines.doctree  usage.doctree
docs/_build/html/_sources/: index.rst  index.rst.txt  quicklines.rst.txt
examples/: 700517_1d.fits  701230_1d.fits  803032_1d.fits  805732_1d.fits  807237_1d.fits  809463_1d.fits  811415_1d.fits  811842_1d.fits  817963_1d.fits  833773_1d.fits  834005_1d.fits  840637_1d.fits
logo/: logo.py
quicklines/: quicklines.py
tests/: test_quicklines.py
