[tool.poetry]
name = "quicklines"
version = "0.1.0"
description = "A simple package that will extract emission line profile information given a 1D spectra of a galaxy"
authors = [
        {name = "Jim Acosta", email = "imgerardo@outlook.com"},
        {name = "Ali Ahmad Khostovan", email="akhostov@gmail.com"},
        {name = "Joey Contreras", email = "joey.z.contreras@gmail.com"},
        {name = "Jamie Quinn", email = "jquinn4@ucmerced.edu"}
        ]
readme = "README.md"
license = {file = "LICENSE"}

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "astropy",
    "matplotlib",
    "scipy"
]